feat: charlee add text and color linear-gradient

--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./style.css" />
+		<title>CSS Color Hack Hours</title>
+	</head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <title>CSS Color Hack Hours</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-</body>
-
+	<body>
+		<section>
+			<article class="wellcom-css">
+				<h1>Welcome to CSS Color</h1>
+				<p>
+					Lorem ipsum is a great place to sit, consectetur adipiscing elit.
+					Vivamus has a great deal. Nunc odio sem, consectetur ac quam quis,
+					vulputate ullamcorper neque. Suspendisse varius efficitur mattis. Done
+					the porta massa lorem, at volutpat enim consectetur semper. Nullam
+					dapibus eget diam eu vestibulum. Sed suscipit sapien sed nibh
+					bibendum, vel dictum lectus elementum. Curabitur and diamond mauris.
+					Sed ac convallis ante. Phasellus consectetur sollicitudin nunc
+					venenatis rutrum. Nulla ullamcorper, nibh a porttitor aliquam, Leo sem
+					maximus justo, ac sagittis dui nulla ut massa. There are many places
+					to visit. Maecenas is an erat and a sapien volutpat aliquet.
+				</p>
+			</article>
+		</section>
+	</body>
 </html>
